# PRefToMotion

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: pref_motion_example.nk
gizmos/: CMakeLists.txt  PRefMotionWarp.gizmo
src/: CMakeLists.txt  PRefToMotion.cpp
